--- a/src/loanservice/Dockerfile
+++ b/src/loanservice/Dockerfile
@@ -2,11 +2,9 @@ FROM eclipse-temurin:17-jdk AS builder
 
 WORKDIR /src
 
-COPY ./gradlew* ./settings.gradle* ./build.gradle .
-COPY ./gradle ./gradle
-
-CMD ["./gradlew", "build"]
 COPY ./ ./
+
+RUN ./gradlew build
 
 # -----------------------------------------------------------------------------
 
@@ -14,7 +12,7 @@ FROM eclipse-temurin:17-jre
 
 WORKDIR /app
 
-COPY --from=builder /src/build/libs/*SNAPSHOT.jar loanservice.jar
+COPY --from=builder /src/build/libs/*.jar loanservice.jar
 
 EXPOSE 8080
 
