changed image pull policy

--- a/kubernetes/loans.yaml
+++ b/kubernetes/loans.yaml
@@ -16,6 +16,7 @@ spec:
       containers:
         - name: loanservice
           image: derekmitchell399/loanservice:v0.0.1
+          imagePullPolicy: Always
           ports:
             - containerPort: 8080
 ---
